<resources>
    <!-- test -->
    <string name="test_word">테스트</string>
    <string name="test_number">1</string>

    <!-- app -->
    <string name="app_name">OreumMark</string>
    <string name="app_k_name">오름마크</string>

    <!-- permission -->
    <string name="permission_title">앱 접근 권한 안내</string>
    <string name="permission_sub_title">오름마크 서비스 사용을 위해\n다음 권한의 허용이 필요합니다.</string>
    <string name="permission_location">위치 (선택)</string>
    <string name="permission_sub_location">현재 위치 수신</string>
    <string name="permission_btn">확인</string>

    <!-- dialog_network -->
    <string name="network_error">네트워크가 연결되지 않았습니다.\nWi-Fi 또는 데이터를 활성화 해주세요.</string>
    <string name="network_retry">다시 시도</string>

    <!-- map -->
    <string name="map_title">오름 지도</string>
    <string name="list_title">오름 목록</string>
    <string name="my_title">나의 오름</string>

    <!-- detail -->
    <string name="review_title">오름 후기</string>
    <string name="detail_stamp">스탬프 찍기</string>

    <!-- login -->
    <string name="login_login">로그인</string>
    <string name="login_auto_login">자동로그인</string>
    <string name="login_join_question">혹시, 오름마크가 처음이신가요?</string>
    <string name="login_join">회원가입</string>
    <string name="login_error">계정 정보가 일치하지 않습니다.</string>

    <!-- join form -->
    <string name="join_form_title_first_top">이름을</string>
    <string name="join_form_title_first_bottom">입력해주세요</string>
    <string name="join_form_title_email_top">이메일을</string>
    <string name="join_form_title_email_bottom">입력해주세요</string>
    <string name="join_form_title_password_top">비밀번호를</string>
    <string name="join_form_title_password_bottom">입력해주세요</string>
    <string name="join_form_title_password_check_bottom">확인해주세요</string>
    <string name="join_form_title_nickname_top">마지막 단계입니다!</string>
    <string name="join_form_title_nickname_bottom">닉네임을 입력해주세요</string>
    <string name="hint_nickname">닉네임</string>
    <string name="hint_password_check">비밀번호 확인</string>
    <string name="hint_password">비밀번호</string>
    <string name="hint_email">이메일</string>
    <string name="hint_name">이름</string>
    <string name="join_form_btn_next">다음</string>
    <string name="join_form_btn_next_check">확인</string>

    <!-- dialog_join_success -->
    <string name="join_success_title">회원가입 완료!</string>
    <string name="join_success_content">오름마크 회원이 되신 것을 환영해요.</string>
    <string name="join_success_btn">확인</string>

    <!-- stamp_setting_location -->
    <string name="setting_location_text">%1$s의 정상에 계신지\n지금 위치를 확인 중이에요!</string>

    <!-- dialog_stamp_boolean -->
    <string name="stamp_false_text">현재 %1$s에 정상에 위치하지 않아요.\n오름에 오른 후 다시 시도해주세요!</string>
    <string name="stamp_false_confirm">확인</string>
    <string name="stamp_true_text">👏축하합니다!👏\n%1$s의 스탬프 찍기 성공🎉</string>

    <!-- dialog_review -->
    <string name="dialog_review_nickname">%1$s</string>
    <string name="dialog_review_hint">%1$s의 오름 후기를 작성해주세요.</string>
    <string name="dialog_review_register">등록</string>
    <string name="review_write">후기 작성</string>

    <!-- search -->
    <string name="search_hint">오름명 검색</string>
    <string name="search_empty">검색결과가 없습니다.</string>

    <!-- fragment_my_stamp -->
    <string name="my_stamp_text">%1$s님의 스탬프 개수</string>
    <string name="my_stamp_num">%1$d</string>
    <string name="stamp_success">%1$s 스탬프 성공!!</string>

    <!-- activity_setting -->
    <string name="setting_nickname">닉네임</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_withdrawal">회원탈퇴</string>

    <!-- dialog_join_term -->
    <string name="term_title">약관 동의</string>
    <string name="term_text">오름마크 개인정보 이용 동의(필수)</string>
    <string name="term_btn">확인</string>

    <!-- dialog_join_term_content -->
    <string name="join_term_content_title">오름마크 이용약관 동의</string>

    <!-- activity_withdrawal -->
    <string name="withdrawal_title">회원탈퇴</string>
    <string name="withdrawal_note">유의사항</string>
    <string name="withdrawal_note_content">- 오름마크 회원탈퇴 시 회원의 스탬프 목록 정보는 모두 소멸되며, 복구가 불가능합니다.\n- 오름마크 회원탈퇴 후 재가입하더라도 탈퇴 전의 스탬프 목록은 복구되지 않습니다.\n- 오름마크 회원탈퇴 시 회원정보 및 이용 기록은 모두 삭제되며, 삭제된 데이터는 복구가 불가능합니다. 다만 법령에 의하여 보관해야 하는 경우 또는 회원가입 남용 등을 위한 정책에 의하여 보관해야하는 정보는 회원탈퇴 후에도 일정기간 보관됩니다. 자세한 사항은 오름마크 개인정보 처리방침에서 확인하실 수 있습니다.</string>
    <string name="withdrawal_check">유의사항을 모두 확인하였으며, 스탬프 목록 소멸에 동의합니다.</string>
    <string name="withdrawal_btn">계정 삭제하기</string>

    <!-- Location_setting -->
    <string name="location_must">"위치정보 설정은 반드시 On 상태여야 합니다."</string>
    <string name="network_must">"네트워크 상태를 확인해주세요."</string>

    <!-- JoinFormActivity -->
    <string name="recheck">"다시 확인해주세요."</string>
    <string name="recheck_nickname">"1~10자 한글, 영문 대소문자, 숫자를 사용할 수 있습니다."</string>
    <string name="recheck_password_check">"비밀번호가 일치하지 않습니다."</string>
    <string name="recheck_password">"8~16자 영문 대소문자, 숫자, 특수문자가 포함되어야 합니다."</string>
    <string name="recheck_email">"이메일 형식이 아닙니다"</string>
    <string name="recheck_name">"잘못된 형식입니다"</string>

    <!-- LoginActivity -->
    <string name="check_login_email">"이메일을 입력해주세요"</string>
    <string name="check_login_password">"비밀번호를 입력해주세요"</string>

    <!-- MyFragment -->
    <string name="my_list_favorite">"관심 목록"</string>
    <string name="my_list_stamp">"스탬프 목록"</string>
</resources>