<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/permission_padding"
    tools:context=".ui.splash.PermissionActivity">

    <TextView
        android:id="@+id/permission_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_title"
        android:textColor="@color/black"
        android:textSize="@dimen/permission_title_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/permission_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_sub_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permission_title"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="30dp" />

    <TextView
        android:id="@+id/permission_loction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/permission_margin_top"
        android:text="@string/permission_location"
        android:textColor="@color/black"
        android:textSize="@dimen/permission_uses_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permission_sub_title" />

    <TextView
        android:id="@+id/permission_sub_loction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_sub_location"
        android:textColor="@color/black"
        android:textSize="@dimen/permission_uses_sub_text_size"
        app:layout_constraintStart_toStartOf="@+id/permission_loction"
        app:layout_constraintTop_toBottomOf="@+id/permission_loction" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/permission_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_btn_next"
        android:outlineProvider="none"
        android:text="@string/permission_btn"
        android:textColor="@color/white"
        android:textSize="@dimen/permission_btn_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>