<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/withdrawal_padding"
    tools:context=".ui.main.setting.WithdrawalActivity">

    <ImageView
        android:id="@+id/withdrawal_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdrawal_title"
        android:textColor="@color/black"
        android:textSize="@dimen/withdrawal_title_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/withdrawal_back"
        app:layout_constraintTop_toTopOf="@+id/withdrawal_back" />

    <TextView
        android:id="@+id/withdrawal_note_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/withdrawal_padding"
        android:text="@string/withdrawal_note"
        android:textColor="@color/black"
        android:textSize="@dimen/withdrawal_note_title_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/withdrawal_back"
        tools:layout_editor_absoluteX="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/withdrawal_padding"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/withdrawal_note_content"
        android:textColor="@color/black"
        android:textSize="@dimen/withdrawal_note_content_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/withdrawal_note_title" />

    <CheckBox
        android:id="@+id/withdrawal_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdrawal_check"
        app:layout_constraintBottom_toTopOf="@+id/withdrawal_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/withdrawal_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_btn_next"
        android:enabled="false"
        android:outlineProvider="none"
        android:text="@string/withdrawal_btn"
        android:textColor="@color/white"
        android:textSize="@dimen/withdrawal_btn_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>