<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_review_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/review_padding_vertical"
        android:paddingHorizontal="@dimen/review_padding_horizontal"
        android:text="@string/dialog_review_nickname"
        android:textSize="@dimen/review_register_text_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dialog_review_edt"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:background="@android:color/transparent"
        android:gravity="start"
        android:hint="@string/dialog_review_hint"
        android:paddingHorizontal="@dimen/review_padding_horizontal"
        android:paddingVertical="@dimen/review_padding_vertical"
        android:textSize="@dimen/review_edt_text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/review_border"
        android:background="@color/green_middle_false" />

    <TextView
        android:id="@+id/dialog_review_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="@dimen/review_register_padding_vertical"
        android:text="@string/dialog_review_register"
        android:textColor="@color/green_middle"
        android:textSize="@dimen/review_register_text_size"
        android:textStyle="bold" />
</LinearLayout>