<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/join_form_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/join_form_margin"
        android:layout_marginTop="@dimen/join_form_margin"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/join_form_title_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/join_form_margin"
        android:text="@string/join_form_title_first_top"
        android:textColor="@color/black"
        android:textSize="@dimen/join_form_title_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/join_form_back"
        app:layout_constraintTop_toBottomOf="@+id/join_form_back" />

    <TextView
        android:id="@+id/join_form_title_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_form_title_first_bottom"
        android:textColor="@color/black"
        android:textSize="@dimen/join_form_title_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/join_form_title_top"
        app:layout_constraintTop_toBottomOf="@+id/join_form_title_top" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/join_form_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/join_form_title_bottom">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/join_form_layout_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/join_form_layout_margin_top"
                android:hint="@string/hint_nickname"
                android:visibility="gone"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/join_form_edt_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="@dimen/join_form_edittext_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/join_form_layout_password_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/join_form_layout_margin_top"
                android:hint="@string/hint_password_check"
                android:visibility="gone"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/join_form_edt_password_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="@dimen/join_form_edittext_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/join_form_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/join_form_layout_margin_top"
                android:hint="@string/hint_password"
                android:visibility="gone"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/join_form_edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="@dimen/join_form_edittext_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/join_form_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/join_form_layout_margin_top"
                android:hint="@string/hint_email"
                android:visibility="gone"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/join_form_edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="@dimen/join_form_edittext_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/join_form_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/join_form_layout_margin_top"
                android:hint="@string/hint_name"
                android:visibility="visible"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/join_form_edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="@dimen/join_form_edittext_size" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/join_btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/join_form_margin"
        android:layout_marginBottom="@dimen/join_form_margin"
        android:background="@drawable/background_btn_next"
        android:enabled="false"
        android:outlineProvider="none"
        android:text="@string/join_form_btn_next"
        android:textColor="@color/white"
        android:textSize="@dimen/join_form_btn_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>